# openswitch-ops-cli

./: .gitignore  .gitreview  AUTHORS  CMakeLists.txt  ChangeLog  DESIGN.md  Makefile.am  Makefile.in  NEWS  NOTICE  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  groups  ltmain.sh  project.config  reviewers.config
docs/: Design.md  README.md  VLAN_cli.md  arpmgrd_test.md  bgp_cli.md  cli_test.md  interface_cli.md  interface_user_guide.md  lacp_cli.md  lldp_cli.md  lldp_user_guide.md  sub-interfaces_cli.md  sub-interfaces_user_guide.md  system_cli.md  system_user_guide.md  vlan_cli.md  vlan_user_guide.md
lib/: .gitignore  CMakeLists.txt  Makefile.am  buffer.c  cli_plugins.c  cli_plugins.h  command.c  command.h  config.h  distribute.c  distribute.h  dyn_helpstr.h  if.c  keychain.c  lib_vtysh_ovsdb_if.c  lib_vtysh_ovsdb_if.h  log.c  memory.h  memtypes.c  ops-cli.pc  ops-cli.pc.in  plist.c  plist.h  privs.c  routemap.c  routemap.h  smux.c  smux.h  sockunion.c  sockunion.h  stream.c  table.h  thread.h  version.h  vty.c  vty.h  vty_utils.c  vty_utils.h  zclient.c  zclient.h  (+1 more)
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: test_vtysh_ct_aaa.py  test_vtysh_ct_bgp_community_list.py  test_vtysh_ct_bgp_ip_prefix_cli.py  test_vtysh_ct_bgp_ipv6_prefix_cli.py  test_vtysh_ct_bgp_neighbor.py  test_vtysh_ct_bgp_neighbor2.py  test_vtysh_ct_bgp_redistribute.py  test_vtysh_ct_bgp_router_cli.py  test_vtysh_ct_cli_infra.py  test_vtysh_ct_config.py  test_vtysh_ct_db.py  test_vtysh_ct_db_intf.py  test_vtysh_ct_domainname.py  test_vtysh_ct_ecmp_cli.py  test_vtysh_ct_fan.py  test_vtysh_ct_hostname.py  test_vtysh_ct_intf_cli.py  test_vtysh_ct_l3routes.py  test_vtysh_ct_led.py  test_vtysh_ct_lldp.py  test_vtysh_ct_logrotate.py  test_vtysh_ct_loopback_intf_cli.py  test_vtysh_ct_ospf.py  test_vtysh_ct_ping.py  test_vtysh_ct_proxy_arp.py  test_vtysh_ct_sftp.py  test_vtysh_ct_sftp_client.py  test_vtysh_ct_show_version.py  test_vtysh_ct_show_version_detail.py  (+6 more)
opsplugins/: system_ecmp_config.py
tacacs/: CMakeLists.txt  pam_tacplus.c  support.c  tacc.c
tacacs/libtac/: CMakeLists.txt
tacacs/libtac/lib/: acct_s.c  authen_s.c  connect.c  cont_s.c  crypt.c  header.c
tests/: dhcp_tftp_cli_test.md  domainname_cli_test.md  local_proxy_arp_cli_ct_test.md  ping_cli_test.md  proxy_arp_cli_ct_test.md  show_version_detail_cli_component_test.md  source_interface_cli_test.md  sub-interface_test.md  test_vtysh_banner.py  test_vtysh_ct_bgp_community_list.py  test_vtysh_ct_bgp_ip_prefix_cli.py  test_vtysh_ct_bgp_ipv6_prefix_cli.py  test_vtysh_ct_bgp_neighbor.py  test_vtysh_ct_bgp_neighbor2.py  test_vtysh_ct_bgp_redistribute.py  test_vtysh_ct_bgp_router_cli.py  test_vtysh_ct_cli_infra.py  test_vtysh_ct_config.py  test_vtysh_ct_db_intf.py  test_vtysh_ct_dhcp_tftp.py  test_vtysh_ct_domainname.py  test_vtysh_ct_ecmp_cli.py  test_vtysh_ct_fan.py  test_vtysh_ct_hostname.py  test_vtysh_ct_intf_cli.py  test_vtysh_ct_l3routes.py  test_vtysh_ct_local_proxy_arp.py  test_vtysh_ct_logrotate.py  test_vtysh_ct_loopback_intf_cli.py  test_vtysh_ct_ospf.py  test_vtysh_ct_proxy_arp.py  test_vtysh_ct_routemap_set_flags.py  test_vtysh_ct_sflow.py  test_vtysh_ct_sftp.py  test_vtysh_ct_sftp_client.py  test_vtysh_ct_show_version.py  test_vtysh_ct_show_version_detail.py  test_vtysh_ct_source_interface_selection.py  test_vtysh_ct_sub_intf_cli.py  test_vtysh_ct_system.py  (+1 more)
vtysh/: .gitignore  CMakeLists.txt  Makefile.am  aaa_vty.c  aaa_vty.h  access_list_vty.c  access_list_vty.h  arp_vty.c  arp_vty.h  banner_vty.c  banner_vty.h  bfd_vty.c  bfd_vty.h  bgp_vty.c  bgp_vty.h  dhcp_tftp_vty.c  dhcp_tftp_vty.h  diag_dump_vty.c  diag_dump_vty.h  dot1Q_encaps_vty.c  dot1Q_encaps_vty.h  ecmp_vty.c  ecmp_vty.h  fan_vty.c  fan_vty.h  intf_vty.c  intf_vty.h  l3routes_vty.c  l3routes_vty.h  l3static_vty.c  l3static_vty.h  lacp_vty.c  lacp_vty.h  led_vty.c  led_vty.h  lldp_vty.c  lldp_vty.h  logrotate_vty.c  logrotate_vty.h  loopback_vty.c  (+92 more)
vtysh/test/: test_cli_infra.py  test_intf_cli.py  test_quagga_ct_logrotate.py  test_vtysh_config.py  test_vtysh_ct_aaa.py  test_vtysh_ct_intervlan.py  test_vtysh_ct_l3routes.py  test_vtysh_ct_logrotate.py  test_vtysh_ct_vlan_internal.py  test_vtysh_ct_vrf.py  test_vtysh_db.py  test_vtysh_db_intf.py  test_vtysh_fan.py  test_vtysh_lacp.py  test_vtysh_led.py  test_vtysh_lldp.py  test_vtysh_powersupply.py  test_vtysh_system.py  test_vtysh_tempsensor.py  test_vtysh_vlan.py
vtysh/tests/: cli_component_test.md  dhcp_tftp_cli_test.md  domainname_cli_test.md  lldp_cli_tests.py  loopback-interface_test.md  loopback_interface_cli_test.md  ping_cli_test.md  proxy_arp_cli_ct_test.md  show_version_detail_cli_component_test.md  show_version_detail_cli_feature_test.md  source_interface_cli_test.md  sub-interface_test.md  sub_interface_cli_test.md  test_vtysh.py  test_vtysh_ct_aaa.py  test_vtysh_ct_access_list_cli.py  test_vtysh_ct_bgp_community_list.py  test_vtysh_ct_bgp_ip_prefix_cli.py  test_vtysh_ct_bgp_ipv6_prefix_cli.py  test_vtysh_ct_bgp_neighbor.py  test_vtysh_ct_bgp_neighbor2.py  test_vtysh_ct_bgp_redistribute.py  test_vtysh_ct_bgp_router_cli.py  test_vtysh_ct_cli_infra.py  test_vtysh_ct_config.py  test_vtysh_ct_db.py  test_vtysh_ct_db_intf.py  test_vtysh_ct_dhcp_tftp.py  test_vtysh_ct_domainname.py  test_vtysh_ct_ecmp_cli.py  test_vtysh_ct_fan.py  test_vtysh_ct_hostname.py  test_vtysh_ct_intervlan.py  test_vtysh_ct_intf_cli.py  test_vtysh_ct_intf_lag.py  test_vtysh_ct_l3routes.py  test_vtysh_ct_l3static.py  test_vtysh_ct_lacp.py  test_vtysh_ct_lag.py  test_vtysh_ct_led.py  (+28 more)
vtysh/utils/: audit_log_utils.c  audit_log_utils.h  intf_vtysh_utils.c  intf_vtysh_utils.h  l3_vtysh_utils.c  l3_vtysh_utils.h  lacp_utils.h  lacp_vtysh_utils.h  ovsdb_vtysh_utils.h  passwd_srv_utils.c  passwd_srv_utils.h  system_vtysh_utils.c  system_vtysh_utils.h  tacacs_vtysh_utils.c  tacacs_vtysh_utils.h  tunnel_vtysh_utils.c  tunnel_vtysh_utils.h  vlan_utils.c  vlan_utils.h  vlan_vtysh_utils.c  vlan_vtysh_utils.h  vrf_vtysh_utils.c  vrf_vtysh_utils.h  vtysh_ovsdb_mutex.h
(+4 files in other folders)
